# get-steady

./: .gitignore  .prettierignore  CONTRIBUTING.md  DESIGN_SYSTEM.md  IMPLEMENTATION_NOTES.md  README.md  SECURITY.md  TECH.md  eslint.config.mjs  package.json  pnpm-lock.yaml  release-please-config.json  tsconfig.base.json
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml  release_readiness.yml
.github/workflows/: ci.yml  codeql.yml  deploy-web.yml  release-desktop-windows.yml  release-please.yml  security.yml
apps/desktop/: CHANGELOG.md  package.json  tailwind.config.ts  tsconfig.json
apps/desktop/apps/desktop/: CHANGELOG.md
apps/desktop/src/: App.test.tsx  App.tsx  index.css
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/src/: db.rs  lib.rs  main.rs  models.rs
apps/desktop/src/components/ui/: badge.tsx  button.tsx  card.tsx  input.tsx  label.tsx  select.tsx  textarea.tsx
apps/desktop/src/lib/: api.ts  query-client.ts  utils.ts
apps/web/: index.html  package.json  tailwind.config.ts  tsconfig.json  vite.config.ts
apps/web/src/: App.test.tsx  App.tsx  constants.ts  index.css
apps/web/src/sections/: Features.tsx  FinalCta.tsx  Footer.tsx  Hero.tsx  Nav.tsx  OpenSource.tsx  Philosophy.tsx  Privacy.tsx  Problem.tsx
docs/: DESIGN_SYSTEM.md  PRD.md  TECH.md
docs/plans/: 2026-03-27-mvp-foundation-design.md  2026-03-27-mvp-foundation.md  2026-03-28-desktop-semantic-release-design.md  2026-03-28-desktop-semantic-release.md
(+14 files in other folders)
